# OpenSimExample

./: README.md
Baxter/: baxter_code.py
ControllerExample/: .gitignore  CMakeLists.txt
ControllerExample/src/: main.cpp
CustomActuatorExample/: CMakeLists.txt
CustomActuatorExample/src/: toyLeg_example.cpp
CustomJoint/: .gitignore
CustomJoint/src/: main.cpp
CustomJointExample/: .gitignore  CMakeLists.txt
CustomJointExample/src/: main.cpp  modifyGait2354.cpp
ExampleMain/: .gitignore
ExampleMain/src/: main.cpp
GitHubExample/: .gitignore  CMakeLists.txt
GitHubExample/src/: main.cpp  main2.cpp
HopperExample/: CMakeLists.txt
HopperExample/inc/: defineDeviceAndController.h
HopperExample/src/: buildDeviceModel.cpp  buildHopperModel.cpp  exampleHopperDevice.cpp  exampleHopperDevice_answers.cpp
NewOptimization/: .gitignore
NewOptimization/src/: README.md  STS_symmetric.cpp  debug.cpp  main.cpp  replay.cpp
OptimizationExample/: .gitignore  CMakeLists.txt
OptimizationExample/src/: main.cpp  main2.cpp  main3.cpp
PostureSetup/: CMakeLists.txt
PostureSetup/src/: SitPosture.cpp
